styles.css
body {
    color: #c17e2c;
    font-family: "Fraunces", monospace;
    background-color: #eff4c3;
    text-align: justify;
}

img {
    max-width: 100%;
    height: auto;
}

footer {
  display: flex;
  background-color: #dce39e;
  justify-content: center;
  color: #361212;
}

footer div{
  background-color: #ae90b8;
  margin: 10px;
  padding: 20px;
  font-size: 30px;
}

